# playground

./: README.md  pyproject.toml  svm_text_exp.ipynb
data/objectnet/: image_meta.parquet
playground/: basic_trainer.py  linear_model.py  load.py  logistic_regression.py  preprocessing.py
